add bower dependencies, update example

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,6 +4,8 @@
       <link rel='stylesheet' href='../css/main.css'></script>
     </head>
     <body>
+      <script type='text/javascript' src='../components/dat.gui.min/index.js'></script>
+      <script type='text/javascript' src='../components/CEF2node/js/main.js'></script>
       <script type='text/javascript' src='../js/main.js'></script>
     </body>
 </html>
